--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <properties>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
-    <sonar.host.url>https://sonar.my-internal-company-domain.net</sonar.host.url>
+    <sonar.host.url>http://172.31.86.22:8000</sonar.host.url>
   </properties>
 
   <modules>
