--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
     <sonar.host.url>http://172.31.86.22:8000</sonar.host.url>
+    <sonar.login>be2fe3y27f07db354983dfxysdsa5256</sonar.login>
+    <sonar.language>java</sonar.language>
+    <sonar.scm.provider>git</sonar.scm.provider>
   </properties>
 
   <modules>
@@ -32,6 +35,13 @@
 
   <build>
     <plugins>
+            
+      <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.2</version>
+      </plugin>
+             
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
